<resources>
    <string name="app_name">TodApp</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="logo_content_description">Logo image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="has_an_account">Already have an account? <u>Login</u>.</string>
    <string name="no_account">New user ? <u>Signup</u>.</string>
    <string name="start_game">Start game</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="correct"><u>Correct:</u></string>
    <string name="inc"><u>Inc:</u></string>
    <string name="percent"><u>%:</u></string>
    <string name="age_1"><u>Age: 1</u></string>
    <string name="age_2"><u>Age: 2</u></string>
    <string name="age_3"><u>Age: 3</u></string>
    <string name="age_1_2"><u>Age: 1-2</u></string>
</resources>