<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDEABD"
    tools:context=".NumbersGame">


    <Button
        android:id="@+id/num1"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="1"
        android:textSize="24sp"
        app:backgroundTint="#E91E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/num6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="6"
        android:textSize="24sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/num2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="2"
        android:textSize="24sp"
        app:backgroundTint="#FF9800"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/num7"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="7"
        android:textSize="24sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintStart_toEndOf="@+id/num6"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/num3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="3"
        android:textSize="24sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintStart_toEndOf="@+id/num2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/num8"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="8"
        android:textSize="24sp"
        app:backgroundTint="#009688"
        app:layout_constraintStart_toEndOf="@+id/num7"
        app:layout_constraintTop_toBottomOf="@+id/num3" />

    <Button
        android:id="@+id/num9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="9"
        android:textSize="24sp"
        app:backgroundTint="#D86B17"
        app:layout_constraintStart_toEndOf="@+id/num8"
        app:layout_constraintTop_toBottomOf="@+id/num4" />

    <Button
        android:id="@+id/num10"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="10"
        android:textSize="24sp"
        app:backgroundTint="#A11D4A"
        app:layout_constraintStart_toEndOf="@+id/num9"
        app:layout_constraintTop_toBottomOf="@+id/num5" />

    <Button
        android:id="@+id/num4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="4"
        android:textSize="24sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintStart_toEndOf="@+id/num3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/num5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-black"
        android:text="5"
        android:textSize="24sp"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/level1_num"
        android:layout_width="107dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/freckle_face"
        android:text="level 1"
        android:textSize="18sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/level2_num"
        android:layout_width="107dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/freckle_face"
        android:text="level 2"
        android:textSize="18sp"
        app:backgroundTint="#673AB7"
        app:layout_constraintEnd_toStartOf="@+id/level3_num"
        app:layout_constraintStart_toEndOf="@+id/level1_num"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/level3_num"
        android:layout_width="107dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/freckle_face"
        android:text="level 3"
        android:textSize="18sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="384dp"
        android:fontFamily="@font/freckle_face"
        android:text="@string/age_1"
        android:textColor="#0E0E0E"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginTop="384dp"
        android:fontFamily="@font/freckle_face"
        android:text="@string/age_2"
        android:textColor="#0E0E0E"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:fontFamily="@font/freckle_face"
        android:text="@string/age_3"
        android:textColor="#0E0E0E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>